Updated documentation with keyboard information.

--- a/css/mc.css
+++ b/css/mc.css
@@ -131,6 +131,12 @@ a:active {
 	font-size: 1.3vw;
 }
 
+#aboutDialog > div > div{
+	height: 60vh;
+	overflow: scroll;
+	overflow-x: hidden;
+}
+
 #cw_key {
 	width: 5vw;
 }
