Changed a lot to use more typescript in play.

--- a/css/mc.css
+++ b/css/mc.css
@@ -158,3 +158,14 @@ span.comment {
 .above90 {
 	background: green;
 }
+
+.clicked_green {
+	background: green;
+}
+.clicked_red {
+	background: red;
+}
+.keyboard {
+	transition: background-color 0.25s ease;
+}
+
