--- a/css/mc.css
+++ b/css/mc.css
@@ -2,6 +2,7 @@ body {
     background: #144766;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1vw;
+    transition: background-color 0.25s ease;
 }
 
 #score_board {
