--- a/css/mc.css
+++ b/css/mc.css
@@ -11,6 +11,12 @@ body {
 	font-size: 3vw;
 }
 
+#qbf {
+	text-align: center;
+	color: white;
+	font-size: 2vw;
+}
+
 #head {
 	text-align: center;
 	color: white;
